...
 */
val presetColors: List<PresetColor> = listOf(
    PresetColor("Red", Color(0xFFEF5350)), // red 400
    PresetColor("Orange", Color(0xFFFFA726)), // orange 400
    PresetColor("Amber", Color(0xFFFFCA28)), // amber 300
    PresetColor("Green", Color(0xFF66BB6A)), // green 400
    PresetColor("Blue", Color(0xFF42A5F5)), // blue 400
    PresetColor("Purple", Color(0xFFAB47BC)), // purple 400
    PresetColor("Teal", Color(0xFF26A69A)) // teal 400
)

